--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 
 h1 {
   font-size: 56px;
-  color: FireBrick;
+  color: Firebrick;
 }
 h2 {
-  color: FireBrick;
+  color: Firebrick;
   font-size: 0.5em;
 }
 p {
