--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 
 h1 {
   font-size: 56px;
-  font-color: Firebrick;
+  color: #800517;
 }
 h2 {
-  font-color: Firebrick;
+  color: #800517;
   font-size: 0.5em;
 }
 p {
