--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@ h1 {
 }
 h2 {
   color: #800517;
-  font-size: 0.5em;
+  font-size: 28px;
 h3 {
-  font-size: 0.5em;
+  color: #800517;
+  font-size: 28px;
   text-align: left;
   
 }
