--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 h1 {
   font-size: 56px;
   color: #800517;
+  line-height: 1px
 }
 h2 {
   color: #800517;
   font-size: 28px;
-  line-height: 28px;
 }
 h3 {
   color: #800517;
