--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ h1 {
   
 }
 h2 {
+  padding: 1px;
   color: #800517;
   font-size: 28px;
 }
@@ -18,6 +19,7 @@ h3 {
   
 }
 p {
+  padding: 1px;
   color: black;
   font-size: 18px;
   }
