--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ h1 {
 }
 h2 {
   padding: 1px;
-  color: #800517;
-  font-size: 28px;
+  color: black;
+  font-size: 22px;
 }
 h3 {
-  color: #800517;
-  font-size: 26px;
+  color: black;
+  font-size: 22px;
   text-align: left;
   
 }
